# argot

./: .gitignore  README.md  install.sh  pyproject.toml  server.py  todo.org  up.sql
argot/: models.py
argot-web/: docs.md  index.html
tui/: go.mod  main.go
