[tool.poetry]
name = "argot"
version = "0.1.0"
description = ""
authors = ["quantumish <freifeld.david@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
peewee = "^3.17.0"
flask = "^3.0.0"
marshmallow = "^3.20.1"
bs4 = "^0.0.1"
flask-cors = "^4.0.0"
flask-login = "^0.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
